fixed growth habit translate bug

--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -17,7 +17,9 @@
     {
 
     <h4 class="result-property" id="plant-growth-habit-{{plant.acceptedSymbol}}">
-        {{growthHabits}}
+        @for (key of growthHabitKeys; track key; let last = $last) {
+        {{ key | transloco }}@if (!last) {, }
+        }
     </h4> }
 
     @if(plant.activeGrowthPeriod.length > 0){
