--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -1,10 +1,8 @@
 <section class="plant-holder" id="plant-holder-{{plant.acceptedSymbol}}">
 
-    <h1 class="result-common-name" id="plant-common-name-{{plant.acceptedSymbol}}">{{plant.commonName | titlecase}}
-    </h1>
-    <h2 class="result-scientific-name" id="plant-scientific-name-{{plant.acceptedSymbol}}">{{plant.scientificName |
-        titlecase}}
-    </h2>
+    <h1 class="result-common-name" id="plant-common-name-{{plant.acceptedSymbol}}">{{plant.commonName | titlecase}}</h1>
+    <h2 class="result-scientific-name" id="plant-scientific-name-{{plant.acceptedSymbol}}">{{plant.scientificName
+        |titlecase}}</h2>
 
     @if(!showMap){
     <span class="symbolAndShadeRow">
@@ -41,6 +39,12 @@
         {{plant.shapeAndOrientation}}
     </h4>
     }
+
+    <!-- <div class="plant-guide-container" id="plant-guide-container-{{plant.acceptedSymbol}}"> -->
+    <!-- TODO figure out how to ensure the guides actually exist -->
+    <!-- <a href="https://plants.usda.gov/DocumentLibrary/plantguide/pdf/pg_{{plant.acceptedSymbol}}.pdf">PDF</a> -->
+    <!-- </div> -->
+
     }
     @else {
     <svg #map [attr.viewBox]="viewBox" class="mini-map">
@@ -57,10 +61,6 @@
 
     }
 
-    <!-- <div class="plant-guide-container" id="plant-guide-container-{{plant.acceptedSymbol}}"> -->
-    <!-- TODO figure out how to ensure the guides actually exist -->
-    <!-- <a href="https://plants.usda.gov/DocumentLibrary/plantguide/pdf/pg_{{plant.acceptedSymbol}}.pdf">PDF</a> -->
-    <!-- </div> -->
 
     <div class="last-row" id="last-row-{{plant.acceptedSymbol}}">
         <!-- <pic-search-icon id="photo-icon-{{plant.acceptedSymbol}}" class="search-icon"
@@ -70,7 +70,7 @@
         </button>
 
         <button class="info-btn" id="map-btn-{{plant.acceptedSymbol}}" (click)="showMap = !showMap">
-            <app-icon class="map-icon" name="location_marker"></app-icon>
+            <app-icon class="map-icon" [name]="showMap ? 'undo' : 'location_marker'"></app-icon>
         </button>
     </div>
 </section>
