--- a/FrontEnd/src/app/plant-overview/plant-overview.component.html
+++ b/FrontEnd/src/app/plant-overview/plant-overview.component.html
@@ -1,10 +1,9 @@
 <section class="container">
     @if(plant() !== null){
     <h1 class="header">{{'PLANT_OVERVIEW_HEADER' | transloco: {plantCommonName: plant().commonName | titlecase,
-        plantScientificName: plant().scientificName | titlecase} }} (
-        <a target="_blank" rel="noopener noreferrer" [href]="usdaGovPlantProfileUrl + plant().acceptedSymbol"
-            id="plant-abbreviation">{{plant().acceptedSymbol}}</a>
-        )
+        plantScientificName: plant().scientificName | titlecase} }} (<a target="_blank" rel="noopener noreferrer"
+            [href]="usdaGovPlantProfileUrl + plant().acceptedSymbol"
+            id="plant-abbreviation">{{plant().acceptedSymbol}}</a>)
     </h1>
 
     <ul class="key-value-list">
