working manual county select override on the position handling

--- a/FrontEnd/src/app/plant-search/plant-search.component.css
+++ b/FrontEnd/src/app/plant-search/plant-search.component.css
@@ -69,3 +69,8 @@ h2 {
 .sort-label-row {
     display: inline-flex;
 }
+
+.input-counties{
+    background-color: var(--grass-light-green);
+    max-width: 32ch;
+}
