sizing optimizations, placeholder text for ux.

--- a/FrontEnd/src/app/plant-search/plant-search.component.css
+++ b/FrontEnd/src/app/plant-search/plant-search.component.css
@@ -78,7 +78,7 @@ h2 {
 
 .input-counties {
     background-color: var(--grass-light-green);
-    width: min(34ch, 100%);
+    width: min(34ch, fit-content);
     font-weight: 600;
     text-overflow: ellipsis;
     margin-left: .3em;
