--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <!-- HACK Base County Plant tile map ref -->
+@if(isBrowser){
 <svg width="0" height="0" style="position:absolute; pointer-events:none;">
     <defs>
         <!-- base county mesh -->
@@ -15,12 +16,15 @@
         }
     </defs>
 </svg>
+}
 
 <div class="plant-search-container">
     <plant-search class="plant-search" (filteredDataBatch)="updatePlantData($event)"
         (filterInProgress$)="clearData($event)" style="width:100%"></plant-search>
 </div>
 
+
+@defer(when plantData.length > 0){
 <section class="container" id="container">
     <cdk-virtual-scroll-viewport id="gov-container-scrollport" [itemSize]="itemSize / columns"
         [maxBufferPx]="itemSize * 6" [minBufferPx]="itemSize * 2" class="gov-container-scrollport">
@@ -31,3 +35,4 @@
         </div>
     </cdk-virtual-scroll-viewport>
 </section>
+}
