creating a tooltip, changing how we populate the plantData arr in home component with push instead of remaking. adding names to the map and trying to use tooltip to display them.

--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -12,7 +12,7 @@
 
         <!-- individual counties -->
         @for(c of countiesPaths$ | async; track c){
-        <path [attr.id]="'county-' + c.id" [attr.d]="c.d" />
+        <path [tooltip]="c.name" [attr.id]="'county-' + c.id" [attr.d]="c.d" />
         }
     </defs>
 </svg>
