--- a/FrontEnd/src/app/plant-tile/plant-tile.component.css
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.css
@@ -71,14 +71,16 @@ h4 {
     fill: #4caf50;
 }
 
-.mini-map .mesh {
+.mini-map .mesh, .mini-map .nation-border {
     fill: none;
-    stroke: #444;
+}
+
+.mini-map .county.present, .mini-map .mesh{
+    stroke: var(--wood-brown);
     stroke-width: 0.2;
 }
 
 .mini-map .nation-border {
-    fill: none;
-    stroke: #000;
+    stroke: var(--wood-dark-brown);
     stroke-width: .6;
 }
