--- a/FrontEnd/src/app/plant-tile/plant-tile.component.html
+++ b/FrontEnd/src/app/plant-tile/plant-tile.component.html
@@ -55,7 +55,7 @@
 
         <!-- highlight counties for this plant -->
         @for(countyFip of combinedCountyFips; track countyFip){
-        <use [attr.href]="'#county-' + countyFip" class="county present" />
+        <use [attr.href]="'#county-' + countyFip" [tooltip]="countyFip" class="county present" />
         }
     </svg>
 
