--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
   font-family: 'Roboto';
   src: url('assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: 'Roboto';
@@ -14,13 +14,13 @@
   font-display: swap;
 }
 
-@font-face {
+/* @font-face {
   font-family: 'Roboto';
   src: url('assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 /* You can add global styles to this file, and also import other style files */
 :root {
@@ -41,7 +41,7 @@ body {
 
 body {
   margin: 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 
