--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -24,7 +24,7 @@
 
 /* You can add global styles to this file, and also import other style files */
 :root {
-  font-family: 'Roboto';
+  font-family: 'Roboto', 'Times New Roman', Times, serif;
   --wood-brown: rgb(131, 100, 60);
   --wood-dark-brown: rgb(68, 51, 29);
   --grass-light-green: rgb(162, 192, 162);
